# simple-wifi-qrcode-generator

./: LICENSE  README.md  generator.py  pyproject.toml
